--- a/keyboardmgr/Form1.resx
+++ b/keyboardmgr/Form1.resx
@@ -161,6 +161,7 @@
 (注意：LCS网站在部分地区被墙）
 一个开源小巧的连点连发工具，即将支持更多功能
 What's new:
+1.0.1.2 图片连发加入置顶与拖放功能,支持更多图片文件格式
 1.0.1.1 增强了列表连发的稳定性；将列表连发加入托盘菜单；新增窗口置顶功能；修复了一些bug
 1.0.1.0 列表连发功能测试
 1.0.0.3 现在可以在程序内设置开机自启
