--- a/keyboardmgr/Form1.resx
+++ b/keyboardmgr/Form1.resx
@@ -135,6 +135,7 @@ LCSq群：146732405
 (注意：LCS网站在部分地区被墙）
 一个开源小巧的连点连发工具，即将支持更多功能
 What's new:
+1.0.1.4 修复了当“随系统启动”选项启用时，程序重启后并不能正确显示选项是否选中状态的bug
 1.0.1.3 修复了在连发内容或列表为空时抛出未处理异常的严重bug
 1.0.1.2 图片连发加入置顶与拖放功能,支持更多图片文件格式
 1.0.1.1 增强了列表连发的稳定性；将列表连发加入托盘菜单；新增窗口置顶功能；修复了一些bug
