--- a/keyboardmgr/My Project/Resources.resx
+++ b/keyboardmgr/My Project/Resources.resx
@@ -121,6 +121,9 @@
   <data name="AddFile_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\AddFile_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Delete_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\Delete_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Open_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\Open_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -130,7 +133,7 @@
   <data name="Add_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\Add_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Delete_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\Delete_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="StatusInformation_32x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\StatusInformation_32x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
