--- a/keyboardmgr/Form1.resx
+++ b/keyboardmgr/Form1.resx
@@ -130,11 +130,13 @@
     <value>True</value>
   </metadata>
   <data name="TextBox1.Text" xml:space="preserve">
-    <value>By LCS 2020-2024
+    <value>By LCS 2020-2025
 LCSq群：146732405
-(注意：LCS网站在部分地区被墙）
-一个开源小巧的连点连发工具，即将支持更多功能
-What's new:
+【注意：LCS网站在部分地区无法正常访问】
+【注意：如果您不喜欢“欢迎”界面，可以去选项更改程序的起始页】
+键鼠管家经典版是一个开源小巧的连点连发工具。
+↓下拉查看更新日志↓
+1.0.1.6 现在可以查看在线公告了
 1.0.1.5 去除有bug的相关功能；更新了LCS网站域名；加入了停止更新提醒
 1.0.1.4 修复了当“随系统启动”选项启用时，程序重启后并不能正确显示选项是否选中状态的bug
 1.0.1.3 修复了在连发内容或列表为空时抛出未处理异常的严重bug
@@ -152,9 +154,6 @@ doopendevelopingfeatures，设置为true，就会
 （内测版日志已删去）</value>
   </data>
   <metadata name="LinkLabel1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Label6.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="TabPage1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
